--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"mocha": "^3.2.0",
+		"mongodb": "3.6",
+		"mongoose": "^8.7.0",
 		"zombie": "^5.0.5"
 	},
 	"repository": {
